--- a/www/index.html
+++ b/www/index.html
@@ -25,6 +25,28 @@
 		<script src="js/app.js"></script> 		
     </head>
     <body>
+  
+	  <ons-tabbar>
+		<ons-tabbar-item
+		  active="true"
+		  label="Home"
+		  icon="home"
+		  page="page1.html">
+		</ons-tabbar-item>
+
+		<ons-tabbar-item
+		  label="Camera"
+		  icon="camera"
+		  page="page2.html">
+		</ons-tabbar-item>
+
+		<ons-tabbar-item
+		  label="Settings"
+		  icon="gear"
+		  page="page3.html">
+		</ons-tabbar-item>
+	  </ons-tabbar>	
+	
 	  <script type="text/ons-template" id="page1.html">
 		<ons-navigator>
 		  <ons-page>
