--- a/www/index.html
+++ b/www/index.html
@@ -31,8 +31,14 @@
 
     <ons-tabbar-item
       label="Camera"
-      icon="camera"
+      icon="images"
       page="page2.html">
+    </ons-tabbar-item>
+
+    <ons-tabbar-item
+      label="Location"
+      icon="ios7-location"
+      page="page5.html">
     </ons-tabbar-item>
 
     <ons-tabbar-item
@@ -44,11 +50,10 @@
 
   <script type="text/ons-template" id="page1.html">
     <ons-navigator>
+      <ons-toolbar>
+        <div class="center">Camera</div>
+      </ons-toolbar>
       <ons-page>
-        <ons-toolbar>
-          <div class="center">Page 1</div>
-        </ons-toolbar>
-
         <ons-row style="margin-top: 100px;">
           <ons-col align="center">
             <ons-button modifier="light" ng-click="ons.navigator.pushPage('page4.html')">
@@ -63,7 +68,7 @@
   <script type="text/ons-template" id="page2.html">
     <ons-page>
       <ons-toolbar>
-        <div class="center">Page 2</div>
+        <div class="center">Camera</div>
       </ons-toolbar>
 
     </ons-page>
@@ -72,7 +77,7 @@
   <script type="text/ons-template" id="page3.html">
     <ons-page>
       <ons-toolbar>
-        <div class="center">Page 3</div>
+        <div class="center">Settings</div>
       </ons-toolbar>
     </ons-page>
   </script>
@@ -91,6 +96,35 @@
       </ons-row>
     </ons-page>
   </script>
+  
+  <script type="text/ons-template" id="page5.html">
+    <ons-page>
+      <ons-toolbar>
+        <div class="center">Location</div>
+      </ons-toolbar>
+	  sfsdf
+	  sdf
+	  dsf
+	  sf
+	  sf
+	  sf
+	  sf
+	  sf
+	  sdf
+	  sdf
+	  sdfd
+	  sfd
+	  sf
+	  sdf
+	  sfd
+	  sfs
+	  fsd
+	  fs
+	  f
+	  
+    </ons-page>
+  </script>
+
  
 </body>
 </html>
