--- a/www/index.html
+++ b/www/index.html
@@ -17,6 +17,11 @@
   <script src="cordova.js"></script>
   <script src="js/app.js"></script> 
   
+  	<script>
+		function changed() {
+		  alert(mySwitch.isChecked() ? 'ON' : 'OFF');
+		}
+	</script>	
 </head>
 
 <body>    
@@ -54,20 +59,20 @@
         <div class="center">Home</div>
       </ons-toolbar>
       <ons-page>
-		<script>
-		function changed() {
-		  alert(mySwitch.isChecked() ? 'ON' : 'OFF');
-		}
-		</script>
-		<ons-switch var="mySwitch" onchange="changed()"></ons-switch>	  
         <ons-row style="margin-top: 100px;">
+          <ons-col align="right">
+		    <ons-switch align="right" var="mySwitch" onchange="changed()">
+		  </ons-col>
+		</ons-row>
+		</ons-switch>	  
+        <ons-row>
           <ons-col align="center">
             <ons-button modifier="light" ng-click="ons.navigator.pushPage('page4.html')">
               Capture Image
             </ons-button>
           </ons-col>
         </ons-row>
-        <ons-row style="margin-top: 100px;">
+        <ons-row>
           <ons-col align="center">
             <ons-button modifier="light">
               Capture Video
