--- a/www/index.html
+++ b/www/index.html
@@ -61,10 +61,10 @@
       <ons-page>
         <ons-row style="margin-top: 50px;margin-right: 5px;margin-bottom: 5px;margin-left: 5px">
           <ons-col align="right">
-		    <div id="drone_arm_switch">Off</div><ons-switch var="mySwitch" onchange="changed()">
+		    <div id="drone_arm_switch">Off</div>
+			<ons-switch var="mySwitch" onchange="changed()"></ons-switch>	  
 		  </ons-col>
 		</ons-row>
-		</ons-switch>	  
         <ons-row style="margin-top: 50px;margin-right: 5px;margin-bottom: 5px;margin-left: 5px">
           <ons-col align="center">
             <ons-button modifier="light" ng-click="ons.navigator.pushPage('page4.html')">
