--- a/www/index.html
+++ b/www/index.html
@@ -119,7 +119,7 @@
       </ons-toolbar>
       <ons-page>
         <ons-row style="margin-top: 40px;margin-right: 20px;margin-bottom: 5px;margin-left: 20px">
-          <ons-col align="right">
+          <ons-col align="left">
 			<ons-switch var="mySwitch" onchange="changed()"><div id="drone_arm_switch">Offline</div></ons-switch>	  
 		  </ons-col>
 		</ons-row>
@@ -157,7 +157,10 @@
       </ons-toolbar>
 	  <ons-row>
 		<ons-col>
-			<div>123calimero</div>
+			<div id="settingsform">
+				<form>
+				</form>
+			</div>
 		</ons-col>
 	  </ons-row>
     </ons-page>
@@ -183,26 +186,14 @@
       <ons-toolbar>
         <div class="center">Location</div>
       </ons-toolbar>
-	  sfsdf
-	  sdf
-	  dsf
-	  sf
-	  sf
-	  sf
-	  sf
-	  sf
-	  sdf
-	  sdf
-	  sdfd
-	  sfd
-	  sf
-	  sdf
-	  sfd
-	  sfs
-	  fsd
-	  fs
-	  f
-	  
+			<div id="tt">
+			sdfsdf
+			dsf
+			dsf
+			dsfd
+			sfd
+			
+			</div>
     </ons-page>
   </script>
 
