added switch + settings page

--- a/www/index.html
+++ b/www/index.html
@@ -120,7 +120,7 @@
       <ons-page>
         <ons-row style="margin-top: 40px;margin-right: 20px;margin-bottom: 5px;margin-left: 20px">
           <ons-col align="left">
-			<ons-switch var="mySwitch" onchange="changed()"><div id="drone_arm_switch">Offline</div></ons-switch>	  
+			<div id="drone_arm_switch">Offline</div><div><ons-switch var="mySwitch" onchange="changed()"></ons-switch></div>
 		  </ons-col>
 		</ons-row>
         <ons-row style="margin-top: 50px;margin-right: 5px;margin-bottom: 5px;margin-left: 5px">
