--- a/www/index.html
+++ b/www/index.html
@@ -14,7 +14,7 @@
   <script src="lib/onsen/js/angular/angular.js"></script>    
   <script src="lib/onsen/js/onsenui.js"></script>    
 
-  <!--script src="js/cordova.js"></script-->
+  <script src="cordova.js"></script>
   <script src="js/app.js"></script> 
   
   <script>
